# thvote-be

./: .gitignore  Cargo.toml  README.md  build-all.sh  cargo_clean.sh
.github/workflows/: ci-gateway.yml  ci-result-query.yml  ci-rust.yml  ci-scraper.yml  ci-submit-handler.yml  ci-user-manager.yml  ci.yml
autocomplete/: .dockerignore  Cargo.toml  build.sh
gateway/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
gateway/src/: common.rs  context.rs  main.rs  result_query.rs  schema.rs  services.rs  submit_handler.rs  user_manager.rs  vote_data.rs
pvrustlib/: Cargo.toml  README.md
pvrustlib/src/: lib.rs
result-query/: Cargo.toml  build.sh
result-query/src/: comm.rs  common.rs  context.rs  handler.rs  handlers.rs  main.rs  models.rs  parser.rs  query.pest  query.rs  schema.rs  service_error.rs
scraper/: .dockerignore  Dockerfile  README.md  build.sh  logger.py  main.py  model.py  process.py  pyproject.toml  requirements.txt
scraper/sites/: acarticle.py  acfun.py  biliarticle.py  bilibili.py  dizzylab.py  dlsite.py  melon.py  nicoseiga.py  nicovideo.py  patchyvideo.py  pixiv.py  pixnovel.py  steam.py  thbwiki.py  tieba.py  twitter.py  weibo.py  youtube.py
scraper/utils/: __init__.py  biliutils.py  cache.py  match.py  network.py  parse.py
submit-handler/: Cargo.toml  README.md  build.sh
submit-handler/src/: comm.rs  common.rs  handlers.rs  main.rs  models.rs  services.rs  validator.rs
user-manager/: .gitignore  Cargo.toml  README.md  build.sh
user-manager/src/: account_management.rs  comm.rs  common.rs  context.rs  email_service.rs  handlers.rs  jwt.rs  legacy_login.rs  main.rs  models.rs  new_login.rs  qq_binding.rs  sms_service.rs  thbwiki_login.rs
vote-data/: Cargo.toml  README.md  build.sh
