[package]
name = "pvrustlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"
chrono = { version = "*", features = ["serde"] }
actix-web = "4.0.0-beta.14"
actix-rt = "2.5.0"
serde = { version = "1.0.59", features = ["derive"] }
serde_derive = "1.0.59"
serde_json = { version = "1" }
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
juniper = { version="0.15.7",features = ["expose-test-schema", "serde_json"] }
juniper_graphql_ws = { version="0.3.0" }
juniper_actix = { version="0.4.0", features = ["subscriptions"] }
