[package]
name = "thvote-result-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
tokio = { version = "1", features = ["full"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
actix-web = "4"
actix-cors = "0.6"
actix-rt = "2.7.0"
pvrustlib = {path = "../pvrustlib"}

[dependencies.mongodb]
version = "2"
default-features = false
features = ["tokio-runtime"]

[profile.release]
lto = true # Link Time Optimization (LTO)
#panic = "abort"

