[package]
name = "thvote-result-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
pest = "2"
pest_derive = "2"
tokio = { version = "1", features = ["full"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = { version = "0.4", features = ["serde"] }
serde = "1" # Used in the Map Data into Structs section
actix = "0.13"
actix-web = "4.0"
actix-cors = "0.6"
actix-rt = "2.7.0"
futures = "0.3"
serde_derive = "1"
serde_json = { version = "1" }
derivative = "2"
redlock = {git = "https://github.com/zyddnys/redlock-rs.git"}

[dependencies.mongodb]
version = "2"
default-features = false
features = ["tokio-runtime"]

[profile.release]
lto = true # Link Time Optimization (LTO)
#panic = "abort"

