[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["shirokurakana <admin@thdog.moe>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
httpx = "^0.22.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
ujson = "^5.1.0"
loguru = "^0.6.0"
redis = "^4.1.2"
pytz = "^2021.3"
PixivPy-Async = "^1.2.13"
lxml = "^4.7.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
