[package]
name = "user-manager"
version = "0.1.0"
authors = ["zyddnys <zyddnys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt-simple = {git = "https://github.com/zyddnys/rust-jwt-simple.git"}
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.0.0-beta.14"
actix-cors = "0.6.0-beta.4"
actix-rt = "2.5.0"
bson = {version = "2.0.1", features = ["chrono-0_4"]}
rust-argon2 = "0.8"
rand = "0.8"
chrono = "0.4"
base64 = "0.13.0"
md-5 = "0.10.0"
hex = "0.4.3"
serde_json = "1.0"
bcrypt = "0.10"
tokio = { version = "1", features = ["full"] }
pvrustlib = {path = "../pvrustlib"}
toml = "0.5.8"

[dependencies.mongodb]
version = "2.0.2"
default-features = false
features = ["async-std-runtime"]

[dependencies.redis]
version = "0.21.4"
features = ["tokio-comp", "aio"]

[profile.release]
lto = true # Link Time Optimization (LTO)
#panic = "abort"

